# mac-control-mcp

./: .gitignore  .jscpd.json  .semgrep.yml  AGENTS.md  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: code-review.yml  codeql.yml  merge-gate.yml  ocr-review.yml  pr-agent.yml  pr-gate.yml  sonarcloud.yml
docs/: technical-due-diligence.md
docs/architecture/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md
docs/specs/: SPEC-Apple-App-Integration.md  SPEC-CLI.md  SPEC-UI-Automation.md
docs/superpowers/specs/: SPEC-Apple-App-Integration.md  SPEC-CLI.md  SPEC-UI-Automation.md
src/mac_control_mcp/: __init__.py  __main__.py  security.py  server.py  truncate.py
src/mac_control_mcp/apple/: spotlight.py
src/mac_control_mcp/ax/: actions.py  snapshot.py  system_ui.py
src/mac_control_mcp/osa/: kb.py  runner.py
src/mac_control_mcp/osa/knowledge/: calendar.yaml  finder_spotlight.yaml  mail.yaml  messages_contacts.yaml  notes.yaml  reminders.yaml  system.yaml
src/mac_control_mcp/tools/: apple_tools.py  ax_tools.py  osa_tools.py  vision_tools.py
src/mac_control_mcp/vision/: capture.py  diff.py  ocr.py
tests/: conftest.py
tests/e2e/: helpers.py  test_kb_e2e.py  test_stdio_roundtrip.py
tests/integration/: test_kb_run.py  test_osa_runner.py  test_spotlight.py  test_truncate_real_ax.py
tests/unit/: test_actions_keymap.py  test_kb.py  test_security.py  test_server_registration.py  test_server_tools.py  test_truncate.py
